<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2014 Carbon Development

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="app_name">Acerca Carbon</string>
    <string name="maintainers_title">Mantenedor</string>
    <string name="maintainers_version_text">enumerados en ningún orden en particular</string>
    <string name="finish_button_text">Finalizar</string>
    <string name="back_button_text">Atrás</string>
    <string name="next_button_text">Siguiente</string>
    <string name="menu_exit">Salir</string>

    <!-- Tabs -->
    <string name="about_title">Acerca</string>
    <string name="features_title">Caracteristicas</string>
    <string name="carbon_main_members">Equipo principal</string>
    <string name="carbon_developers">Desarrolladores</string>
    <string name="carbon_maintainers">Mantenedores</string>
    <string name="carbon_team">Equipo Meetup</string>

    <!-- Carbon Team -->
    <string name="carbon_title">Equipo de Carbon</string>
    <string name="carbon_version_text"></string>

    <!-- Drawer dependency -->
    <string name="navigation_drawer_open">Abrir barra de navegación</string>
    <string name="navigation_drawer_close">Cerrar barra de navegación</string>
    <string name="navigation_drawer_toggle">Ajustes rápidos</string>
    <string name="toggle_back_cfibers">Atrás</string>

    <!-- Layout dev_card strings -->
    <string name="donate">Donar</string>
    <string name="email">Email</string>
    <string name="googleplus">Google+</string>
    <string name="github">Github</string>
    <string name="twitter">Twitter</string>

    <string name="status_dev">Desarrollador</string>
    <string name="status_designers">Diseñador</string>
    <string name="status_pr">Relacciones públicas &amp; Multimedia social</string>
    <string name="status_gerrit">Mantenedor Gerrit</string>
    <string name="status_core_dev">Desarrador principal</string>
    <string name="status_dev_and_co_founder">Desarrollador / Co-Fundador</string>

    <!-- URLs -->
    <string name="cr_website_title">Visita nuestra web</string>
    <string name="cr_donate_title">Donar a CarbonDev</string>
</resources>
